# kiichigoFirmware

./: .gitignore  CMakeLists.txt  README.md  _config.yml  index.md  main.cpp  main.cpp.old
archive/: CMakeLists.txt
archive/include/: Motor.hpp  StepperMotorDriver.hpp  TaskManager.hpp
include/: LimitSwitch.h  Log.h  MotionPlanner.h  Motor.hpp  PosePlanner.h  StepperDriver.h  StepperMotor.h  StepperMotorDriver.hpp  TB67S128FTG.h  TB67S128FTG.hpp  TaskManager.hpp
src/: LimitSwitch.cpp  Log.cpp  MotionPlanner.cpp  PosePlanner.cpp  StepperDriver.cpp  StepperMotor.cpp  TB67S128FTG.cpp  kiichigoFirmware.cpp  main.cpp
src/Scheduler/: Scheduler.cpp
test/: motor_commands.txt  pose_planner.ipynb  pose_planner_move_to.ipynb  serial_command.py
